<menu xmlns:android="http://schemas.android.com/apk/res/android" >
	<!--
	Make menu 1 it also provides 4 sub menus as shown in screenshot. 
	 -->
	<item 
	    android:title="@string/menu1"
	    android:showAsAction="always">	    
	    <menu >
	        <item 
	    		android:title="@string/submenu1"
	    		android:showAsAction="always"/>
	        
	       	<item
	    		android:title="@string/submenu2"
	    		android:showAsAction="always"/>
	       	
	  		<item
	    		android:title="@string/submenu3"
	    		android:showAsAction="always"/>
	      	       	
	     	<item
	    		android:title="@string/submenu4"
	    		android:showAsAction="always"/>
	        
	    </menu>
	</item>

	<item 
	    android:title="@string/menu2"
	    android:showAsAction="always"/>

	<item 
	    android:title="@string/menu3"
	    android:showAsAction="always"/>
	
	<item 
	    android:title="@string/menu4"
	    android:showAsAction="always"/>
		
</menu>